--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -808,3 +808,27 @@ msgstr ""
 msgctxt "#31784"
 msgid "Recommended Media"
 msgstr ""
+
+msgctxt "#31785"
+msgid "Enable smart shortcuts for playlists"
+msgstr ""
+
+msgctxt "#31786"
+msgid "Enable smart shortcuts for favourites"
+msgstr ""
+
+msgctxt "#31787"
+msgid "Enable smart shortcuts for Emby"
+msgstr ""
+
+msgctxt "#31788"
+msgid "Enable smart shortcuts for Plex"
+msgstr ""
+
+msgctxt "#31789"
+msgid "Enable smart shortcuts for Netflix"
+msgstr ""
+
+msgctxt "#31790"
+msgid "You may need to restart Kodi for the changes to take effect"
+msgstr ""
