--- a/language/English (US)/strings.po
+++ b/language/English (US)/strings.po
@@ -445,7 +445,7 @@ msgid "themoviedb.org"
 msgstr "themoviedb.org"
 
 msgctxt "#31208"
-msgid "In Cinemas"
+msgid "In Theaters"
 msgstr "In Theaters"
 
 msgctxt "#31209"
