--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -832,3 +832,11 @@ msgstr ""
 msgctxt "#31790"
 msgid "You may need to restart Kodi for the changes to take effect"
 msgstr ""
+
+msgctxt "#31791"
+msgid "Wall"
+msgstr ""
+
+msgctxt "#31792"
+msgid "Poster"
+msgstr ""
